# Aerodrome_Ground_Controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.sh  imgui.ini
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
libs/raylib-5.0/include/: raylib.h
libs/triangulation/: delaunator.hpp
resource/: RMA.txt  Test.txt
src/: AGCException.hpp  Application.cpp  Application.hpp  Constants.hpp  Coordinate.cpp  Coordinate.hpp  Coordinates.cpp  Coordinates.h  Coordinates.hpp  Game.cpp  Game.h  Game.hpp  GameObject.h  Parser.hpp  Polygon.cpp  Polygon.hpp  Quadrilateral.cpp  Quadrilateral.hpp  ResourceManager.cpp  ResourceManager.hpp  Runway.cpp  Runway.h  Runway.hpp  Utils.cpp  Utils.h  Utils.hpp  Vec2.hpp  earcut.hpp  earcutter.cpp  earcutter.hpp  earcutter.hpp.pch  main.cpp  main.cpp.bakbak  sweepline.cpp  sweepline.hpp
src/Aircraft/: Aircraft.cpp  Aircraft.hpp
src/Geo/: GeoMarkings.cpp  GeoMarkings.hpp  GeoParser.cpp  GeoParser.hpp
src/airport/: Airport.cpp  Airport.hpp
src/colours/: ColourManager.cpp  ColourManager.hpp  ColourParser.cpp  ColourParser.hpp  Colours.cpp  Colours.hpp
src/labels/: AirportLabel.cpp  AirportLabel.hpp  Label.hpp  LabelParser.cpp  LabelParser.hpp
src/polygon/: Polygon.cpp  Polygon.hpp  PolygonParser.cpp  PolygonParser.hpp
